feat : 코치님 개선사항 적용